<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FinalProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="update_row">Update</string>
    <string name="update_data">update your profile . . .</string>
    <string name="get_information">Information about row</string>

    <string name="enter_data">Enter Name Here . . .</string>

    <string name="Add_Entry">დაამატე</string>
    <string name="Delete_entry">წაშალე</string>
    <string name="Update_entry">შეცვალე</string>
    <string name="Go_to_Category">დეტალურად არჩევანის შესახებ</string>

    <string name="Products_Filtered">თქვენი არჩეული "როგორც ყოველთვის": </string>
    <string name="Product_chosen">მონიშნული პროდუქტი: </string>
    <string name="delete_product_from_as_usual">წაშალე</string>
    <string name="add_product_in_as_usual">დაამატე</string>

    <string name="add_to_basket">Add to basket</string>
    <string name="go_to_basket">Go to basket</string>
    <string name="chosen_product_text_first_tab">მონიშნული პროდუქტი: </string>

    <string name="order">შეკვეთა</string>
    <string name="basket_products">შესაკვეთად გამზადებული პროდუქტები: </string>

    <string name="Add_to_basket_from_as_usual">Add to basket</string>

    <string name="details_about_menu">Details</string>
    <string name="chosen_menu">მონიშნული მენიუ:</string>

    <string name="menu_filtered">არჩეული მენიუ: </string>

    <string name="chosen_news_name">არჩეული სიახლე: </string>

    <string name="categories">Categories</string>


    <string name="Product_chosen_from_all_products">პროდუქტი ყველა პროდუქტიდან: </string>

    <string name="details_about_category">Details</string>
    <string name="chosen_category_name">არჩეული კატეგორია: </string>

    <string name="category_filtered">არჩეული კატეგორია: </string>

    <string name="submit_button">Submit</string>
    <string name="sign_up_button">Sign up</string>
    <string name="mail_filed">Enter your mail . . .</string>
    <string name="password_field">Enter your password . . .</string>

    <string name="name_field">Enter your name . . .</string>
    <string name="last_name_field">Enter your last name . . .</string>
    <string name="private_number_field">Enter your primary number . . .</string>
    <string name="mobile_field">Enter your mobile . . .</string>
    <string name="email_field">Enter your email . . .</string>
    <string name="card_number_field">Enter your card number . . .</string>
    <string name="registration_button">Registration</string>

    <string name="loaded_items">მიმდინარეობს ჩამოტვირთვა . . .</string>
    <string name="total_price_title">Total Price:</string>
</resources>
