<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/log_in"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <LinearLayout
        android:id="@+id/for_sign_up"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Margin_From_Edit_Text"
            android:inputType = "text"
            android:hint="@string/name_field"
            />

        <EditText
            android:id="@+id/last_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Margin_From_Edit_Text"
            android:inputType = "text"
            android:hint="@string/last_name_field"
            />

        <EditText
            android:id="@+id/private_number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Margin_From_Edit_Text"
            android:inputType = "text"
            android:hint="@string/password_field"
            />

        <EditText
            android:id="@+id/mobile_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Margin_From_Edit_Text"
            android:inputType = "phone"
            android:hint="@string/mobile_field"
            />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Margin_From_Edit_Text"
            android:inputType = "text"
            android:hint="@string/email_field"
            />

        <EditText
            android:id="@+id/card_number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Margin_From_Edit_Text"
            android:inputType = "phone"
            android:hint="@string/card_number_field"
            />



        <Button
            android:id="@+id/registration_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Margin_From_Button"
            android:text="@string/registration_button"
            android:layout_weight="1"
            />


    </LinearLayout>




</ScrollView>