<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


    <TextView
        android:id="@+id/choosen_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/Product_chosen"
        android:layout_marginBottom="@dimen/Margin_From_Edit_Text"
        />




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue">

        <Button
            android:id="@+id/add_product_in_as_usual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product_in_as_usual"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/delete_product_from_as_usual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_product_from_as_usual"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/to_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_to_basket_from_as_usual"
            android:textAllCaps="false"
            android:layout_weight="1"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/chosen_product_text_first_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/Products_Filtered"
        android:layout_marginBottom="@dimen/Margin_From_Edit_Text"
        />

    <ListView
        android:id="@+id/deletable_list_view_for_products"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
    </ListView>

    <TextView
        android:id="@+id/products_for_as_usual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/Product_chosen_from_all_products"
        android:layout_marginBottom="@dimen/Margin_From_Edit_Text"
        />

    <ListView
        android:id="@+id/all_products"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
    </ListView>

</LinearLayout>