<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/log_in"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


    <EditText
        android:id="@+id/mail_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Margin_From_Edit_Text"
        android:inputType = "text"
        android:hint="@string/mail_filed"
        />

    <EditText
        android:id="@+id/password_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Margin_From_Edit_Text"
        android:inputType = "textPassword"
        android:hint="@string/password_field"
        />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Margin_From_Button"
            android:text="@string/submit_button"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/Margin_From_Button"
            android:text="@string/sign_up_button"
            android:layout_weight="1"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/login_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />



</LinearLayout>