<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


    <Button
        android:id="@+id/from_menu_add_to_basket"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add_to_basket_from_as_usual"
        android:textAllCaps="false"
        />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_title"/>

        <TextView
            android:id="@+id/menu_total_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/menu_activity_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/menu_filtered"
        android:layout_marginBottom="@dimen/Margin_From_Edit_Text"
        />

    <ListView
        android:id="@+id/products_list_in_menu_activity"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    </ListView>

</LinearLayout>