<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/product_list_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue">

        <Button
            android:id="@+id/add_to_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_basket"
            android:textAllCaps="false"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/go_to_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_basket"
            android:textAllCaps="false"
            android:layout_weight="1"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/chosen_product_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/Product_chosen"
        android:background="@color/blue"
        />

    <ListView
        android:id="@+id/list_view_for_products"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    </ListView>

</LinearLayout>
